# learn_eng

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  prospector.yml  pyproject.toml  requirements.txt
auth/templates/: login.html
dct/: main.py  models.py  repository.py  service.py
dct/service/: parser_yandex_api.py  string_handler.py
dct/static/js/: scripts.js
dct/templates/dct/: add_text.html  base.html  index.html  show_text.html
migrations/versions/: 2e13db0c28f7_.py  b5a5c0dd86ab_.py
templates/: base.html
user/: main.py  models.py  repository.py  service.py
user/data/: users.db
user/static/css/: signin.css
user/templates/: login.html  register.html
user/templates/user/: base_user.html  login.html  page404.html  register.html
