[tool.poetry]
name = "learn-eng"
version = "0.1.0"
description = ""
authors = ["Alexandr <maximchik.alexandr@yandex.ru>"]
readme = "README.md"
packages = [{include = "learn_eng"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.28.1"
python-dotenv = "0.20.0"
werkzeug = "2.2.0"
flask = "2.2"
flask-sqlalchemy = "^3.0.3"
flask-login = "^0.6.2"
psycopg2-binary = "^2.9.6"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
